# tzspd

./: CMakeLists.txt  README.md  addr-list.c  addr-list.h  tzsp-decap.c  tzsp-decap.h  tzspd.c  utils.c  utils.h  win32.c  win32.h
systemd/: tzspd.service
